# lan-chat

./: Cargo.toml  LICENSE  README.md  temp
.github/workflows/: rust.yml
src/: chat_logic.rs  lib.rs  main.rs  networking.rs  tui_handler.rs  user_interface.rs
src/networking/: client.rs  messaging.rs  mod.rs  server.rs
