[package]
name = "lan-chat"
version = "0.5.2"
edition = "2021"
authors = ["Sapherye <adarshdas950@gmail.com>"]
license = "MIT"
description = "A terminal based chatting application with a terminal user interface"
keywords = ["terminal", "chat", "tcp"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
crossterm = "0.27.0"
if-addrs = "0.10.1"
ratatui = "0.26.0"
tui-textarea = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
