[package]
name = "lan-chat"
version = "0.12.2"
edition = "2021"
authors = ["Saphereye <adarshdas950@gmail.com>"]
license = "MIT"
description = "A terminal based chatting application with a terminal user interface"
keywords = ["terminal", "chat", "tcp"]
categories = ["command-line-utilities"]
exclude = [
    ".github/workflows/rust.yml",
    ".gitignore",
    "LICENSE",
    "README.md",
]
readme = "README.md"
repository = "https://github.com/Saphereye/lan-chat"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
if-addrs = "0.10.1"
ratatui = "0.26.0"
tui-textarea = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4.20"
env_logger = "0.11.1"
clap = { version = "4.5.0", features = ["derive"] }
rand = "0.8.5"
lazy_static = "1.4.0"
emojis = "0.6.1"
